# traccc

./: CMakeLists.txt
cmake/: traccc-config.cmake.in  traccc-functions.cmake
device/alpaka/: CMakeLists.txt
device/alpaka/include/traccc/alpaka/finding/: finding_algorithm.hpp
device/alpaka/include/traccc/alpaka/fitting/: fitting_algorithm.hpp
device/alpaka/include/traccc/alpaka/seeding/: spacepoint_binning.hpp  track_params_estimation.hpp
device/alpaka/include/traccc/alpaka/utils/: definitions.hpp  get_vecmem_resource.hpp  make_prefix_sum_buff.hpp  queue.hpp
device/alpaka/src/clusterization/: clusterization_algorithm.cpp  measurement_sorting_algorithm.cpp
device/alpaka/src/finding/: combinatorial_kalman_filter.hpp  finding_algorithm.cpp
device/alpaka/src/fitting/: fitting_algorithm.cpp  kalman_fitting.hpp
device/alpaka/src/seeding/: seed_finding.cpp  spacepoint_binning.cpp  spacepoint_formation_algorithm.cpp  track_params_estimation.cpp
device/alpaka/src/utils/: get_vecmem_resource.cpp  make_prefix_sum_buff.cpp  opaque_queue.cpp  opaque_queue.hpp  parallel_algorithms.hpp  queue.cpp  utils.cpp  utils.hpp
device/common/include/traccc/finding/device/: find_tracks.hpp  propagate_to_next_surface.hpp
device/common/include/traccc/finding/device/impl/: build_tracks.ipp  find_tracks.ipp  propagate_to_next_surface.ipp
examples/run/alpaka/: CMakeLists.txt  full_chain_algorithm.cpp  full_chain_algorithm.hpp  seeding_example_alpaka.cpp  seq_example_alpaka.cpp  throughput_mt.cpp  throughput_st.cpp
tests/alpaka/: alpaka_basic.cpp  test_cca.cpp
